force-app/main/default/objects/Beneficiario__c/Beneficiario__c.object-meta.xml
<CustomObject>
    <label>Beneficiario</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Numero Beneficiario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>