force-app/main/default/objects/Beneficiario__c/fields/Casilla__c.field-meta.xml
<CustomField>
    <fullName>Casilla__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizado en las clase APEX para marcar un registro</description>
    <inlineHelpText>Utilizado en las clase APEX para marcar un registro</inlineHelpText>
    <label>Casilla</label>
    <type>Checkbox</type>
</CustomField>