force-app/main/default/objects/Beneficiario__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficiarios</relationshipLabel>
    <relationshipName>Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>