force-app/main/default/objects/Beneficiario__c/fields/Cod_Beneficiarios__c.field-meta.xml
<CustomField>
    <fullName>Cod_Beneficiarios__c</fullName>
    <label>Cod Beneficiarios</label>
    <length>120</length>
    <type>Text</type>
</CustomField>