force-app/main/default/objects/Beneficiario__c/fields/Codigo_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Beneficiario__c</fullName>
    <label>Codigo Beneficiario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>