force-app/main/default/objects/Beneficiario__c/fields/Comisiones_cargos__c.field-meta.xml
<CustomField>
    <fullName>Comisiones_cargos__c</fullName>
    <formula>IF(AND(TEXT(Moneda_cuenta__c)=&apos;HNL&apos;,TEXT(Forma_Retiro__c)=&apos;ACH&apos;),$CustomMetadata.Configuracion_Cobro__mdt.ACH.Monto__c,IF(AND(TEXT(Moneda_cuenta__c)=&apos;USD&apos;,TEXT(Forma_Retiro__c)=&apos;ACH&apos;), $CustomMetadata.Configuracion_Cobro__mdt.ACH.Monto_dolar__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comisiones y cargos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>