force-app/main/default/objects/Beneficiario__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Cuentas__c</referenceTo>
    <relationshipLabel>Beneficiarios</relationshipLabel>
    <relationshipName>Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>