force-app/main/default/objects/Beneficiario__c/fields/Grado_Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Grado_Parentesco__c</fullName>
    <label>Grado de Parentesco</label>
    <length>40</length>
    <type>Text</type>
</CustomField>