force-app/main/default/objects/Beneficiario__c/fields/Moneda_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Moneda_cuenta__c</fullName>
    <label>Moneda de la cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HNL</fullName>
                <label>Lempiras</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <label>Dólares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>