force-app/main/default/objects/Beneficiario__c/fields/Monto_neto_retirar__c.field-meta.xml
<CustomField>
    <fullName>Monto_neto_retirar__c</fullName>
    <formula>Monto_bruto__c -  Comisiones_cargos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto neto a retirar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>