force-app/main/default/objects/Beneficiario__c/fields/Nombre_del_banco__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_banco__c</fullName>
    <label>Nombre del banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>