force-app/main/default/objects/Beneficiario__c/fields/Numero_cuenta_destino__c.field-meta.xml
<CustomField>
    <fullName>Numero_cuenta_destino__c</fullName>
    <label>Número de cuenta destino</label>
    <length>50</length>
    <type>Text</type>
</CustomField>