force-app/main/default/objects/Beneficiario__c/fields/Pago_a_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Pago_a_Tercero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Pago a Tercero?</label>
    <type>Checkbox</type>
</CustomField>