force-app/main/default/objects/Beneficiario__c/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <label>ABUELO(A)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>AMIGO(A)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CONYUGE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>CUÑADO(A)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>HERMANO(A)</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>HIJASTRO(A)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>HIJO(A)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>NIETO(A)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>PADRE/MADRE</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>PRIMO(A)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SOBRINO(A)</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>SUEGRO(A)</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>TIO(A)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>YERNO/NUERA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>