force-app/main/default/objects/Beneficiario__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>