force-app/main/default/objects/Beneficiario__c/fields/Segundo_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido__c</fullName>
    <label>Segundo Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>