force-app/main/default/objects/Beneficiario__c/fields/Tipo_de_Identificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Identificaci_n__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>CEDULA IDENTIDAD</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>PASAPORTE</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CARNET RESIDENCIA</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>RTN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>